RESOLVED FIXED212043
REGRESSION(r257463): [GTK] Build failure with -DENABLE_GLES2=ON
https://bugs.webkit.org/show_bug.cgi?id=212043
Summary REGRESSION(r257463): [GTK] Build failure with -DENABLE_GLES2=ON
Michael Catanzaro
Reported 2020-05-18 13:31:06 PDT
2.29.1 failed to build in gnome-build-meta because we use -DENABLE_GLES=ON for our ARM build. Note we have -DENABLE_X11_TARGET=ON and I see PlatformDisplayX11.h really is included, so this requires further investigation to see what's up with PlatformDisplayX11. I'll try a -DENABLE_GLES2=ON build tomorrow and see if I can figure out what's wrong. In file included from /usr/include/glib-2.0/gobject/gobject.h:24, from /usr/include/glib-2.0/gobject/gbinding.h:29, from /usr/include/glib-2.0/glib-object.h:22, from /usr/include/gstreamer-1.0/gst/gstenumtypes.h:6, from /usr/include/gstreamer-1.0/gst/gst.h:31, from ../Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.h:24, from ../Source/WebCore/platform/graphics/PlatformDisplay.h:37, from ../Source/WebCore/platform/graphics/gstreamer/PlatformDisplayGStreamer.cpp:21: ../Source/WebCore/platform/graphics/gstreamer/PlatformDisplayGStreamer.cpp: In function ‘GstGLDisplay* createGstGLDisplay(const WebCore::PlatformDisplay&)’: ../Source/WebCore/platform/graphics/gstreamer/PlatformDisplayGStreamer.cpp:69:80: error: ‘PlatfomDisplayX11’ was not declared in this scope; did you mean ‘PlatformDisplay_h’? 69 | return GST_GL_DISPLAY(gst_gl_display_egl_new_with_egl_display(downcast<PlatfomDisplayX11>(sharedDisplay).eglDisplay())); | ^~~~~~~~~~~~~~~~~ ../Source/WebCore/platform/graphics/gstreamer/PlatformDisplayGStreamer.cpp:69:112: error: no matching function for call to ‘downcast<<expression error> >(const WebCore::PlatformDisplay&)’ 69 | return GST_GL_DISPLAY(gst_gl_display_egl_new_with_egl_display(downcast<PlatfomDisplayX11>(sharedDisplay).eglDisplay())); | ^ In file included from ../Source/WebCore/platform/graphics/PlatformDisplay.h:30, from ../Source/WebCore/platform/graphics/gstreamer/PlatformDisplayGStreamer.cpp:21: DerivedSources/ForwardingHeaders/wtf/TypeCasts.h:83:43: note: candidate: ‘template<class Target, class Source> WTF::match_constness_t<Source, Target>* WTF::downcast(Source*)’ 83 | inline match_constness_t<Source, Target>* downcast(Source* source) | ^~~~~~~~ DerivedSources/ForwardingHeaders/wtf/TypeCasts.h:83:43: note: template argument deduction/substitution failed: In file included from /usr/include/glib-2.0/gobject/gobject.h:24, from /usr/include/glib-2.0/gobject/gbinding.h:29, from /usr/include/glib-2.0/glib-object.h:22, from /usr/include/gstreamer-1.0/gst/gstenumtypes.h:6, from /usr/include/gstreamer-1.0/gst/gst.h:31, from ../Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.h:24, from ../Source/WebCore/platform/graphics/PlatformDisplay.h:37, from ../Source/WebCore/platform/graphics/gstreamer/PlatformDisplayGStreamer.cpp:21: ../Source/WebCore/platform/graphics/gstreamer/PlatformDisplayGStreamer.cpp:69:112: error: template argument 1 is invalid 69 | return GST_GL_DISPLAY(gst_gl_display_egl_new_with_egl_display(downcast<PlatfomDisplayX11>(sharedDisplay).eglDisplay())); | ^ In file included from ../Source/WebCore/platform/graphics/PlatformDisplay.h:30, from ../Source/WebCore/platform/graphics/gstreamer/PlatformDisplayGStreamer.cpp:21: DerivedSources/ForwardingHeaders/wtf/TypeCasts.h:75:43: note: candidate: ‘template<class Target, class Source> WTF::match_constness_t<Source, Target>& WTF::downcast(Source&)’ 75 | inline match_constness_t<Source, Target>& downcast(Source& source) | ^~~~~~~~ DerivedSources/ForwardingHeaders/wtf/TypeCasts.h:75:43: note: template argument deduction/substitution failed: In file included from /usr/include/glib-2.0/gobject/gobject.h:24, from /usr/include/glib-2.0/gobject/gbinding.h:29, from /usr/include/glib-2.0/glib-object.h:22, from /usr/include/gstreamer-1.0/gst/gstenumtypes.h:6, from /usr/include/gstreamer-1.0/gst/gst.h:31, from ../Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.h:24, from ../Source/WebCore/platform/graphics/PlatformDisplay.h:37, from ../Source/WebCore/platform/graphics/gstreamer/PlatformDisplayGStreamer.cpp:21: ../Source/WebCore/platform/graphics/gstreamer/PlatformDisplayGStreamer.cpp:69:112: error: template argument 1 is invalid 69 | return GST_GL_DISPLAY(gst_gl_display_egl_new_with_egl_display(downcast<PlatfomDisplayX11>(sharedDisplay).eglDisplay())); | ^
Attachments
Patch (1.71 KB, patch)
2020-05-18 18:51 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2020-05-18 18:08:37 PDT
(In reply to Michael Catanzaro from comment #0) > PlatfomDisplayX11 Missing 'r' ;)
Michael Catanzaro
Comment 2 2020-05-18 18:51:49 PDT
EWS
Comment 3 2020-05-19 01:20:06 PDT
Committed r261854: <https://trac.webkit.org/changeset/261854> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399695 [details].
Radar WebKit Bug Importer
Comment 4 2020-05-19 01:21:14 PDT
Note You need to log in before you can comment on or make changes to this bug.