REGRESSION(r257463): [GTK] Build failure with -DENABLE_GLES2=ON https://bugs.webkit.org/show_bug.cgi?id=212043

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-05-19
Reviewed by Philippe Normand.

Fix the typo "Platfom" -> "Platform"

* platform/graphics/gstreamer/PlatformDisplayGStreamer.cpp:
(createGstGLDisplay):

Canonical link: https://commits.webkit.org/224944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261854 268f45cc-cd09-0410-ab3c-d52691b4dbfc